[gd_scene load_steps=28 format=3 uid="uid://d1bs6e5qalp08"]

[ext_resource type="Texture2D" uid="uid://caid3a70xcgx" path="res://Assets/Dice/one.png" id="1_rcoci"]
[ext_resource type="Resource" uid="uid://u57hl1rfroe7" path="res://Scenes/Dice/DiceSheets/d100.tres" id="2_jish2"]
[ext_resource type="Texture2D" uid="uid://b4ypvu70ca1wm" path="res://Assets/Dice/two.png" id="2_qtoly"]
[ext_resource type="Texture2D" uid="uid://b387t1ndchcv6" path="res://Assets/Dice/three.png" id="3_gxv2c"]
[ext_resource type="Texture2D" uid="uid://bvk0sonwdc68m" path="res://Assets/Dice/four.png" id="5_bwkcx"]
[ext_resource type="Texture2D" uid="uid://1covocr7d1du" path="res://Assets/Dice/five.png" id="7_w5i34"]
[ext_resource type="Script" uid="uid://y1h3y4nbnl84" path="res://Scenes/Dice/dice.gd" id="8_qtoly"]
[ext_resource type="Texture2D" uid="uid://cxl03evbr54si" path="res://Assets/Dice/blank.png" id="8_vqk5c"]
[ext_resource type="AudioStream" uid="uid://vif1j8eah3r2" path="res://Assets/Sounds/die-throw-3.wav" id="9_gwuab"]
[ext_resource type="Texture2D" uid="uid://bs8nvukbon6" path="res://Assets/Dice/six.png" id="9_tn7s0"]
[ext_resource type="Texture2D" uid="uid://qhlturc5tudb" path="res://Assets/Dice/dice.png" id="10_5hyjc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jish2"]
atlas = ExtResource("1_rcoci")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxv2c"]
atlas = ExtResource("2_qtoly")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtoly"]
atlas = ExtResource("3_gxv2c")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqk5c"]
atlas = ExtResource("5_bwkcx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwuab"]
atlas = ExtResource("7_w5i34")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcoci"]
atlas = ExtResource("9_tn7s0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hyjc"]
atlas = ExtResource("8_vqk5c")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwkcx"]
atlas = ExtResource("10_5hyjc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5i34"]
atlas = ExtResource("10_5hyjc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tn7s0"]
atlas = ExtResource("10_5hyjc")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_n5pme"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jish2")
}],
"loop": false,
"name": &"1",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxv2c")
}],
"loop": false,
"name": &"2",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtoly")
}],
"loop": false,
"name": &"3",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqk5c")
}],
"loop": false,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwuab")
}],
"loop": false,
"name": &"5",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcoci")
}],
"loop": false,
"name": &"6",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hyjc")
}],
"loop": false,
"name": &"blank",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwkcx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5i34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tn7s0")
}],
"loop": true,
"name": &"roll",
"speed": 12.0
}]

[sub_resource type="Animation" id="Animation_vqk5c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:material:shader_parameter/dissolve_progress")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_rcoci"]
resource_name = "rainbow"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4, 6, 8, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0.454902, 1, 1), Color(0, 1, 0, 1), Color(1, 1, 0, 1), Color(1, 0, 0, 1), Color(1, 0, 1, 1), Color(0, 0.454902, 1, 1)]
}

[sub_resource type="Animation" id="Animation_gwuab"]
resource_name = "rotate"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jish2"]
_data = {
&"RESET": SubResource("Animation_vqk5c"),
&"rainbow": SubResource("Animation_rcoci"),
&"rotate": SubResource("Animation_gwuab")
}

[sub_resource type="LabelSettings" id="LabelSettings_y75u6"]
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="Dice" type="Control"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 3
anchors_preset = 0
pivot_offset = Vector2(16, 16)
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
script = ExtResource("8_qtoly")
stats = ExtResource("2_jish2")

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Body" type="AnimatedSprite2D" parent="."]
position = Vector2(16, 16)
sprite_frames = SubResource("SpriteFrames_n5pme")
animation = &"1"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jish2")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_gwuab")
bus = &"Sfx"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
label_settings = SubResource("LabelSettings_y75u6")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_texture_button_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
